# CrossroadTrafficSFML

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CrossroadTrafficSFML/: Cars.cpp  CrossroadTrafficSFML.pro  Game.cpp  Game.h  GameComponents.cpp  GasEngineCar.cpp  Rectangle.cpp  main.cpp  platform.h
CrossroadTrafficSFML/basics/: Rectangle.cpp  Rectangle.h  singleton.h
CrossroadTrafficSFML/cars/: Cars.cpp  Cars.h  ElectroEngineCar.h  GasEngineCar.h  ICar.cpp  ICar.h
CrossroadTrafficSFML/game/: Game.cpp  Game.h  GameComponents.cpp  GameComponents.h  GameConstants.h
CrossroadTrafficSFML/handlers/: eventhandler.cpp  eventhandler.h
CrossroadTrafficSFML/inc/: Cars.h  Game.h  GameComponents.h  GameConstants.h  GasEngineCar.h  HybridEngineCar.h  ICar.h  Rectangle.h
CrossroadTrafficSFML/screen/: scene.cpp  scene.h  screenmgr.cpp  screenmgr.h  userinterface.cpp  userinterface.h
CrossroadTrafficSFML/src/: ElectroEngineCar.cpp  Game.cpp  GameComponents.cpp  GasEngineCar.cpp  HybridEngineCar.cpp  ICar.cpp
source/: platform.h
source/cars/: ICar.cpp  ICar.h
source/game/: Game.h  GameConstants.h
source/screen/: scene.cpp  scene.h  screenmgr.cpp  screenmgr.h  userinterface.cpp  userinterface.h
